[package]
name = "icaltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.10" }
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"

icalendar = "0.13.0"
chrono = "0.4.19"

log = "0.4.17"
env_logger = "0.9.0"

anyhow = "1.0.58"